# NeuralNetwork

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  FinalLayer.cpp  FinalLayer.h  HiddenLayer.cpp  HiddenLayer.h  ILayer.cpp  ILayer.h  LayerConnection.cpp  LayerConnection.h  LayerFactory.cpp  LayerFactory.h  MnistReader.cpp  MnistReader.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  NeuronConnection.cpp  NeuronConnection.h  SigmoidNormalizerFunction.cpp  SigmoidNormalizerFunction.h  StartLayer.cpp  StartLayer.h  Trainer.cpp  Trainer.h  main.cpp
src/DataStructure/: Matrix.cpp  Matrix.h  MatrixD.cpp  MatrixD.h
src/Functions/: INormalizerFunction.h
src/Mnist/: MnistReader.cpp  MnistReader.h
src/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
src/NeuralNetwork/Layers/: FinalLayer.cpp  FinalLayer.h  HiddenLayer.cpp  HiddenLayer.h  ILayer.cpp  ILayer.h  LayerConnection.cpp  LayerConnection.h  LayerFactory.cpp  LayerFactory.h  StartLayer.cpp  StartLayer.h
src/NeuralNetwork/Neurons/: Neuron.cpp  NeuronConnection.cpp  NeuronConnection.h
src/Trainer/: Trainer.cpp  Trainer.h
